files/haiqv/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haiqv-frontend
  namespace: kubeflow
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: haiqv-frontend
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: haiqv-frontend
        version: v1
    spec:
      containers:
        - image: ziippy/new-haiqv-frontend:2.0.2
          imagePullPolicy: IfNotPresent
          name: haiqv-frontend
          ports:
            - containerPort: 9999
              protocol: TCP
      restartPolicy: Always
      serviceAccount: haiqv-frontend
      serviceAccountName: haiqv-frontend
